--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,15 @@
 {
-  "manifest_version": 2,
-
-  "name": "Music Theory Portal Token Checker",
-  "description": "A token checker for the music theory portal web app",
-  "version": "0.0.1",
-
-  "browser_action": {
-    "default_popup": "index.html",
-    "default_title": "Open the popup"
-  },
-  "content_security_policy": "script-src 'self' 'sha256-5As4+3YpY62+l38PsxCEkjB1R4YtyktBtRScTJ3fyLU='; object-src 'self'",  "permissions": [
-  ]
-}
+    "short_name": "React App",
+    "name": "Create React App Sample",
+    "icons": [
+      {
+        "src": "favicon.ico",
+        "sizes": "192x192",
+        "type": "image/png"
+      }
+    ],
+    "start_url": "./index.html",
+    "display": "standalone",
+    "theme_color": "#000000",
+    "background_color": "#ffffff"
+  }
